Bug 1751532 - Do not expose rtp stream stats until there is packet flow. r=jib

Differential Revision: https://phabricator.services.mozilla.com/D137042